2007-11-18  Chris Morley

	* include/openbabel/alias.h: New File with OBGenericData derived
	class to hold aliases of placeholder atoms.
	
	* src/formats/mdlformat.cpp: When reading an alias block put the
	data into the AliasData class above, without trying to interpret it.
	Write alias block is the atom has unexpanded AliasData.
	
	* src/format/xmlformats/cmlformat.cpp: had forgotten Atom4Refs
	whem doing mods for atomclasses.
	
	* src/GUI/optswx.cpp:added a test for >0 to a parameter of isspace()
	
	* include/openbabel/plugin.h: Moved CharPtrLess to be a free
	standing struct rather than embedded in OBPlugin. Less to go wrong
	with SWIG.
	

2007-11-18  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/builder.cpp: Added some documentation. Now uses OpenDataFile().

	* src/typer.cpp, include/openbabel/typer.h, data/ringtyp.txt: Added
	OBRingTyper class. Brief doxygen documentation included on use.

	* src/ring.cpp, include/openbabel/ring.h: Added GetType() and
	SetType() (see OBRingTyper)

	* include/openbabel/mol.h: Added SetRingTypesPerceived() and
	HasRingTypesPerceived() (see OBRingTyper) 

2007-11-16  Chris Morley

	* include/openbabel/atomclass.h: New file with OBAtomClassData
	class, derived from OBGenericData and that attaches to OBMol.
	
	* src/formats/smilesformat.cpp: Added capability to reads and 
	optionally write atom class e.g [CH3:1].
	
	* src/format/cmlformat.cpp: Read and write atom classes (embedded
	in atom ids, with care that they remain unique, even when atom
	classes ar not.
	
	* windows-vc2005/OpenBabelDLL/OpenBabelDLL.vcproj: updated to
	remove RDKit references.

2007-11-16  Michael Banck  <mbanck@gmx.net>

	Make libinchi.la a convenience library.

	* src/formats/inchi/Makefile.am (lib_LTLIBRARIES): Renamed to ...
	* (noinst_LTLIBRARIES): ... this.
	* src/formats/inchi/Makefile.in: Regenerated.

2007-11-16  Michael Banck  <mbanck@gmx.net>

	* src/formats/xml/Makefile.am (INCLUDES): Added
	-I$(top_builddir)/include.